Docker - elasticsearch - add option to enable shield plugin

--- a/docker/templates/searchindexers/elasticsearch/Dockerfile
+++ b/docker/templates/searchindexers/elasticsearch/Dockerfile
@@ -6,3 +6,7 @@ RUN bin/plugin install analysis-icu
 RUN bin/plugin install analysis-kuromoji
 RUN bin/plugin install analysis-smartcn
 RUN bin/plugin install analysis-stempel
+
+# Install shield plugins
+RUN bin/plugin install license
+RUN bin/plugin install shield
